--- a/thesis/content/chp-3-video-games.tex
+++ b/thesis/content/chp-3-video-games.tex
@@ -2,10 +2,10 @@
 
 Playing video games is a kind of experiential entertainment would help people to have new internal experiences. The virtual world of video games let adults to play new roles and experience emotions. Games provide opportunities for the development and design of environments where the player can interactively experience various emotions and mental conditions. This interactive experience is in contrast to cinema and other more passive forms of entertainment.
 
-In computer games, gameplay is usually considered of key importance ~\cite{rollings2006fundamentals, malone1982makes}. One can define gameplay as the pattern defined through the game rules ~\cite{salen2004rules, pajares2008understanding} the connection between the player and the game ~\cite{laramee2002game} or challenges ~\cite{rollings2003andrew} presented by the game. Gameplay is not a singular entity, and can consist of many different elements. Gameplay is essentially a synergy that emerges from the inclusion of certain factors ~\cite{rollings2003andrew}. In absence of a broadly accepted definition for gameplay, our focus here is targeted on one core element \textit{challenge}. The sense of challenge in video games is a significant contribution to continued play. However the challenge gameplay element should be carefully adjusted for the targeted audience. The process of adjusting the challenge level of the game is usually referred to as game balancing. To balance the challenge level or difficulty scale of the game, designers must change many interrelated parameters to create a experience somewhere between too easy and boring and too hard and frustrating ~\cite{koster2013theory}. In this chapter, a history of related works investigating the relation between a game's difficulty level and various emotional states is provided.
+In computer games, gameplay is usually considered of key importance ~\cite{rollings2006fundamentals, malone1982makes}. One can define gameplay as the pattern defined through the game rules ~\cite{salen2004rules, pajares2008understanding} the connection between the player and the game ~\cite{laramee2002game} or challenges ~\cite{rollings2003andrew} presented by the game. Gameplay is not a singular entity, and can consist of many different elements. Gameplay is essentially a synergy that emerges from the inclusion of certain factors ~\cite{rollings2003andrew}. In absence of a broadly accepted definition for gameplay, my focus here is targeted on one core element \textit{challenge}. The sense of challenge in video games is a significant contribution to continued play. However the challenge gameplay element should be carefully adjusted for the targeted audience. The process of adjusting the challenge level of the game is usually referred to as game balancing. To balance the challenge level or difficulty scale of the game, designers must change many interrelated parameters to create a experience somewhere between too easy and boring and too hard and frustrating ~\cite{koster2013theory}. In this chapter, a history of related works investigating the relation between a game's difficulty level and various emotional states is provided.
 
 \section{Gameplay and The Concept of Flow}
-Mihaly Csikszentmihalyi, in the mid 70s, in an attempt to explain happiness, introduced the concept of \textit{flow}. His work as a professor of psychology has become fundamental to the field of positive psychology that includes happiness, creativity, subjective well-being and fun ~\cite{csikszentmihalyi1990flow}. The feeling of complete and energized focus while engaged in an activity is usually referred to as flow, this feeling also has an associated sense of enjoyment and fulfillment ~\cite{csikszentmihalyi1990flow}. During the flow experience our focus maximizes performance and we lose track of time and worries. Flow is also referred to as the optimal experience or being in \textit{the zone}.
+Mihaly Csikszentmihalyi, in the mid 70s, in an attempt to explain happiness, introduced the concept of \textit{flow}. His work as a professor of psychology has become fundamental to the field of positive psychology that includes happiness, creativity, subjective well-being and fun ~\cite{csikszentmihalyi1990flow}. The feeling of complete and energized focus while engaged in an activity is usually referred to as flow, this feeling also has an associated sense of enjoyment and fulfillment ~\cite{csikszentmihalyi1990flow}. During the flow experience my focus maximizes performance and I lose track of time and worries. Flow is also referred to as the optimal experience or being in \textit{the zone}.
 
 Csikszentmihalyi in his work, identified eight major components of flow ~\cite{csikszentmihalyi1990flow}:
 
@@ -20,7 +20,7 @@ Csikszentmihalyi in his work, identified eight major components of flow ~\cite{c
 \item An altered sense of time.
 \end{itemize}
 
-An activity doesn't necessarily require all the eight components to inspire the flow experience. We will constrain our analysis to the first item which relates to the challenge and the skill level. Figure ~\ref{fig:challenge-vs-skill} shows Csikszentmihalyi's flow model in terms of challenge and skill.
+An activity doesn't necessarily require all the eight components to inspire the flow experience. I will constrain my analysis to the first item which relates to the challenge and the skill level. Figure ~\ref{fig:challenge-vs-skill} shows Csikszentmihalyi's flow model in terms of challenge and skill.
 
 \img
 {Challenge and skill level}
@@ -73,12 +73,12 @@ Demasi and Cruz ~\cite{demasi2003line} developed NPCs employing genetic algorith
 \subsection{Dynamic Game Balancing in Recent Games}
 In recent years many well known game titles have integrated more complex dynamic game balancing mechanisms. The 2008 video game Left 4 Dead integrated a new AI technology called \textit{The AI Director} ~\cite{left2008dead}. The AI Director monitors individual player's and groups of players' performance and their progress in the game, and how well they work together, and dynamically determines the number of zombies that attack the player, and when boss fights should happen. The director also makes decisions about audiovisual elements of the game to attract players' attention to certain areas or set the mood ~\cite{left4dead2009handson}. This technique, also called \textit{Procedural narrative}, tries to analyze players' experience in the game and control up-coming events to give the player a sense of narrative. In 2009, Resident Evil 5 employed the \textit{Difficulty Scale}. This mechanism, mentioned in the official strategy guide, grades the player's performance on a scale from 1 to 10, and dynamically adjusts NPC behaviors like attacking and enemy strength, damage, and resistance based on the player's performance. Player performance is estimated based on different in-game variables such as, deaths, damage dealt and critical attacks. The statically selected difficulty levels of the game locks players at a certain number; for example, the Normal difficulty, locks player performance at grade 4, but will dynamically change based on a player's performance between 2 (if player is doing poorly) and 7 if doing well ~\cite{resident2009evil}. Fallout: New Vegas and Fallout 3 are of other well known game titles utilizing dynamic difficulty adjustment techniques. In these titles, players would encounter more challenging combatants while progressing in the game. The system is designed to retain a constant difficulty level while the player's skill increases.
 
-Addressing the game balance problem using predefined difficulty levels cannot incorporate the behaviors of all potential players using a player's in-game data and employing artificial intelligence can generates predictable behaviors which reduce the believability of the non-player characters (NPCs). Furthermore, human players enhance their skills while playing a game which necessitates an adaptive mechanism for more challenge during play ~\cite{olesen2008real}. We should also mention, even with all the development of AI in computer games, players often still find playing against human controlled opponents more interesting than computer controlled ones ~\cite{weibel2008playing}.
+Addressing the game balance problem using predefined difficulty levels cannot incorporate the behaviors of all potential players using a player's in-game data and employing artificial intelligence can generates predictable behaviors which reduce the believability of the non-player characters (NPCs). Furthermore, human players enhance their skills while playing a game which necessitates an adaptive mechanism for more challenge during play ~\cite{olesen2008real}. I should also mention, even with all the development of AI in computer games, players often still find playing against human controlled opponents more interesting than computer controlled ones ~\cite{weibel2008playing}.
 
 \section{Emotionally Adaptive Games}
 While adjusting the challenge level is crucial to video game design, what styles of game play is appealing differs from person to person. For example skill level differences between different players might make a difficulty level which is enjoyable by a novice, but boring for an expert player; Games therefore need psychological customization techniques ~\cite{saari2005towards}. Game adaptation that is solely based on in-game performance can only have limited success, because it adapts to performance not experience ~\cite{bartle1996hearts}. Each type of player has his/her own goals, preferences and emotional responses when playing a game. To optimize a player's experience, psychological customization requires a game to take the emotional state of the player into account. Games should become emotionally adaptive (Figure ~\ref{fig:affective-game-system}) ~\cite{tijs2009creating}.
 
-Affective computing can have a major impact on not only video games but any form of computing reliant on human interaction. The concept of affective gaming was first introduced by Wehrenberg, through using Biofeedback to control a game based on relaxation level. It was one of the earliest studies on correlating a game with player's biofeedback. After years of research the project was first implemented in 1984 for Apple II computers. The results of that study proved that human arousal level can actually be measured through GSR and employed to control a game ~\cite{wehrenberg1995willball}. Different emotion theories as described in chapter ~\ref{chap:emotion} can be utilized for analysis and estimation of human affect state while interacting with computers. Because a user's affective state can dynamically change from an emotional perspective during an interactive experience, emotional human-computer interaction works in an \textit{affective loop} ~\cite{sundstrom2005user}. Polaine in his work on the flow principle in interactivity ~\cite{polaine2005flow} argues that flow is a feedback loop of action-reaction-interaction and involves collaboration or exchange (with real or computer agents). Our work is based on a similar feedback loop in a game context which dynamically adjusts a game's difficulty level by measuring a user's affect state. Figure ~\ref{fig:affective-game-system} ~\cite{tijs2009creating} shows a schematic view of this closed affective loop for an emotionally adaptive game. In this closed loop, by continuously looking at the gamers emotional state the game influences the player's experience and emotional state by providing the right game mechanics ~\cite{hunicke2004mda}. Ideally, during play, the emotional state of the player (measured in terms of emotion-data), is continuously being fed back to the game so that the game can adapt its mechanics (e.g. difficulty level) in real-time, with an eye towards enhancing flow ~\cite{chen2007flow} or immersion ~\cite{nacke2008flow}.
+Affective computing can have a major impact on not only video games but any form of computing reliant on human interaction. The concept of affective gaming was first introduced by Wehrenberg, through using Biofeedback to control a game based on relaxation level. It was one of the earliest studies on correlating a game with player's biofeedback. After years of research the project was first implemented in 1984 for Apple II computers. The results of that study proved that human arousal level can actually be measured through GSR and employed to control a game ~\cite{wehrenberg1995willball}. Different emotion theories as described in chapter ~\ref{chap:emotion} can be utilized for analysis and estimation of human affect state while interacting with computers. Because a user's affective state can dynamically change from an emotional perspective during an interactive experience, emotional human-computer interaction works in an \textit{affective loop} ~\cite{sundstrom2005user}. Polaine in his work on the flow principle in interactivity ~\cite{polaine2005flow} argues that flow is a feedback loop of action-reaction-interaction and involves collaboration or exchange (with real or computer agents). My work is based on a similar feedback loop in a game context which dynamically adjusts a game's difficulty level by measuring a user's affect state. Figure ~\ref{fig:affective-game-system} ~\cite{tijs2009creating} shows a schematic view of this closed affective loop for an emotionally adaptive game. In this closed loop, by continuously looking at the gamers emotional state the game influences the player's experience and emotional state by providing the right game mechanics ~\cite{hunicke2004mda}. Ideally, during play, the emotional state of the player (measured in terms of emotion-data), is continuously being fed back to the game so that the game can adapt its mechanics (e.g. difficulty level) in real-time, with an eye towards enhancing flow ~\cite{chen2007flow} or immersion ~\cite{nacke2008flow}.
 
 \img
 {Emotionally adaptive games}
@@ -96,7 +96,7 @@ Emotionally adapted gaming can be seen as collection of affective game adaptatio
 \end{itemize}
 
 % Emotionally Adapted Games - An Example of a First Person Shooter.pdf(paraphrase)
-To manipulate emotions in gaming on the basis of avoiding or approaching a specific emotional state, we can categorize our manipulation goals and strategies to the followings:
+To manipulate emotions in gaming on the basis of avoiding or approaching a specific emotional state, Saari et al. categorize manipulation goals and strategies to the followings:
 
 \subsubsection{Manipulating Emotions Through Narrative Features} There are the transient basic emotional effects of games that are dependent of the phase of the game or specific events. These are emotions such as happiness, satisfaction, sadness, dissatisfaction, anger, aggression, fear and anxiousness. These emotions are the basis of narrative experiences, i.e. being afraid of the enemy in a shooting game, feeling aggression and wishing to destroy the enemy and feeling satisfaction, even happiness, when the enemy has been destroyed. Emotional regulation systems in these instances most focus on manipulating the event structures, such as characters, their roles, events that take place and other features of the narrative gaming experience ~\cite{saari2005emotional}.
 
