--- a/thesis/content/chp-4-impl.tex
+++ b/thesis/content/chp-4-impl.tex
@@ -4,13 +4,13 @@
 % - talk about the sensors and the fuzzy framework for emotion recognition
 % and connect that to the game design elements
 
-Our goal is to adapt gameplay based on a player's affective state. Although there have not been studies investigating our particular question of how player experience is impacted by applying different mechanisms for affect-driven adjustments in games, there has been related work that can inform our research. Affective gaming has been defined by Gilleade et al. as an activity where ``the player's current emotional state is used to manipulate gameplay." ~\cite{gilleade2005affective}. Researchers have created and studied games that replace traditional game controls with affective game controls (e.g., the GSR-controlled dragons racing in `Relax-to-win' ~\cite{bersak2001intelligent} or the Electroencephalography-controlled balls rolling in `BrainBall' ~\cite{hjelm2003research}). Researchers have also investigating augmenting traditional game controls with affective game controls. For example, the Death Trigger side-scrolling shooter was played with a traditional gamepad and control scheme, but also adapted game elements (e.g., length of the flamethrower, size of the enemies, and the density of snowfall) using different physiological signals ~\cite{nacke2011biofeedback}. Finally, researchers have investigated adapting games using affective input. In work closest to ours, Dekker et al. ~\cite{dekker2007please} developed a game modification using the Source SDK and Half-Life 2, in which GSR and HR were used to control game shader graphics, screen shaking, and enemy spawn points (the number of locations in which enemies are put into the game world).  Kuikanniemi et al. ~\cite{kuikkaniemi2010influence} studied how awareness of the manipulation affected player experience in a first-person shooter (FPS), where affective input modulated character walking and turning speed, aiming direction, recoil amount, and firing rate. Their work revealed that players preferred to be aware of the adaptation.
+My goal is to adapt gameplay based on a player's affective state. Although there have not been studies investigating my particular question of how player experience is impacted by applying different mechanisms for affect-driven adjustments in games, there has been related work that can inform my research. Affective gaming has been defined by Gilleade et al. as an activity where ``the player's current emotional state is used to manipulate gameplay." ~\cite{gilleade2005affective}. Researchers have created and studied games that replace traditional game controls with affective game controls (e.g., the GSR-controlled dragons racing in `Relax-to-win' ~\cite{bersak2001intelligent} or the Electroencephalography-controlled balls rolling in `BrainBall' ~\cite{hjelm2003research}). Researchers have also investigating augmenting traditional game controls with affective game controls. For example, the Death Trigger side-scrolling shooter was played with a traditional gamepad and control scheme, but also adapted game elements (e.g., length of the flamethrower, size of the enemies, and the density of snowfall) using different physiological signals ~\cite{nacke2011biofeedback}. Finally, researchers have investigated adapting games using affective input. In work closest to mine, Dekker et al. ~\cite{dekker2007please} developed a game modification using the Source SDK and Half-Life 2, in which GSR and HR were used to control game shader graphics, screen shaking, and enemy spawn points (the number of locations in which enemies are put into the game world).  Kuikanniemi et al. ~\cite{kuikkaniemi2010influence} studied how awareness of the manipulation affected player experience in a first-person shooter (FPS), where affective input modulated character walking and turning speed, aiming direction, recoil amount, and firing rate. Their work revealed that players preferred to be aware of the adaptation.
 
-This chapter explores various aspects of the affect engine developed and used in our study. We would show how the generic design of this system can be incorporated with any game engine and how can it be expanded for any other type of sensor and biofeedback data not necessarily used in this work. The first section talks about the overall design and different modules of the affect engine; the next sections describe different modules in detail giving examples of different settings used for our particular study. In final sections we present the game engine used in this work, and how we incorporated the affect engine in our experiments.
+This chapter explores various aspects of the affect engine developed and used in my study. I would show how the generic design of this system can be incorporated with any game engine and how can it be expanded for any other type of sensor and biofeedback data not necessarily used in this work. The first section talks about the overall design and different modules of the affect engine; the next sections describe different modules in detail giving examples of different settings used for my particular study. In final sections I present the game engine used in this work, and how I incorporated the affect engine in my experiments.
 
 \section{Emotionally Adaptive Game System Design}
 
-We will now present a basic system schematic of an emotionally adapted game in Figure ~\ref{fig:system-design}. A typical game engine depicted on the left-hand side of the diagram, continuously captures user input which is usually collected using gaming controllers such as gamepads or mouse and keyboard. % Emotionally Adapted Games - An Example of a First Person Shooter.pdf
+I will now present a basic system schematic of an emotionally adapted game in Figure ~\ref{fig:system-design}. A typical game engine depicted on the left-hand side of the diagram, continuously captures user input which is usually collected using gaming controllers such as gamepads or mouse and keyboard. % Emotionally Adapted Games - An Example of a First Person Shooter.pdf
 This input data is then processed and transferred to the layer that handles the game's internal logical state, and the user input may influence the game state. After the logical state of the game is defined the system alters the actions of the synthetic agents in the game world, including the actions of computer-controlled non-player characters. The complexity of this AI layer varies greatly depending on the game. Based on the game state and the determined actions of the synthetic agents, the physics engine determines the movements of different objects within the world. Finally, the game world is synthesized for the player by rendering the graphical elements and producing and controlling the audio elements within the gamer ~\cite{saari2005emotional}. The proposed emotional regulation can be implemented as a middleware system that runs parallel to the game engine. The input processing layer of the game engine can receive a data flow of captured and pre-processed sensor data. The real-time signal processing may consist of different forms of amplifying, filtering and feature selection on the psychophysiological signals. This data flow may directly influence the state of the game world, or it can be used by the signal transformation sub-module to extract emotion values. This module consists of fuzzy rules for transformation of physiological signals into arousal and valence space and then the transformation from the arousal and valence space to emotion variables such as excitement, boredom and frustration. In addition, it contains a collection of design rules for narrative constructions and game object presentation within the game world. The outputs of the affect engine may then be applied to various actions of the game engine: i) the narrative state of the game world may be re-directed, ii) the game mechanics relating to the challenge balance might be altered or iii) the game might be adapted in its presentation layer such as visual or sound effects (non-game mechanic elements).
 % Emotionally Adapted Games - An Example of a First Person Shooter.pdf
 
@@ -26,7 +26,7 @@ This input data is then processed and transferred to the layer that handles the 
 % % Emotionally Adapted Games - An Example of a First Person Shooter.pdf
 % p feedback system regards how these signals can be meaningfully connected to the actual game play via adapting game controls.  Adaptation of game controls includes changes in rate of fire, recoil, movement speed and shaking. If a player is aroused this will be reflected in EDA and respiration signals which in turn will make rate of fire and movement slower and will make the aim shaky. Hence, for a highly aroused player the game becomes more difficult. For a mildly aroused or calm player the controls become more efficient and easy to use hence facilitating performance at game play. Game events are mostly arousing. The amount of cubes to shoot, their approach and firing on the user, the amount of health left after being hit and the sound effects all are geared to drive up arousal in the game. The player's task is to be calm as indexed by psychophysiological signals to be able to operate the controls more efficiently. In our tests of the game we have collected also EMG data to infer the valence dimension of emotion during game play. In addition to the psychophysiological signals we have collected data from the players using behavioral game logging, video capture, interviews and questionnaires. During our tests we noticed that proper calibration and base lining of the psychophysiological signals is very important for the adaptations to work. We also noticed that having robust stimuli in the game is crucial for the adaptations to work because in many cases the stimulus functioned as a trigger in adaptation. The psychophysiological signals used are calibrated by using dynamic range (basically a variation of dynamic signal normalization algorithm), which has a memory buffer of a few seconds (depending on signal). Dynamic range is easy to use and effective calibration mechanism, and relative change seems to be more practical than absolute values in this kind of gaming.  According to our early analysis, there are three key issues in designing psychophysiologically adaptive games i) understanding the meaningful emotionally adaptive gaming patterns, ii) implementation of adaptation algorithms and signal processing, and iii) purposeful use of sensors in the game context [15]. The design patterns used in emotionally adaptive gaming must be meaningful and enjoyable for the player, and the utilization of signals must also obey the overall goal of the game. In order to achieve the goal player should find the right rhythm or balance of playing the game and control of psychophysiological responses and signals.   Signals should be analyzed as close to real-time as possible in psycho- physiologically adaptive gaming in order to keep the feedback loop in pace with the game adaptations and game events. We have used time-series analysis with short sample windows. In practice, ECG, EEG and EMG always require extensive data processing, but EDA and respiration can be almost used as such to create the adaptation signal. This implies that not all psychophysiological signals are equally open to be used as real-time inputs into an adaptive game at least in this stage of signal processing hardware and software development. Usability of psychophysiological recording devices remains quite poor. Respiration, HR [heart rate] and EDA are probably the easiest to implement. Also in case of emotional adaptation the design of the game may include the physical design of the sensors, e.g. “Detective hat” for EEG sensors or “Sniper-gloves” for EDA sensors. Hence, the sensors could be designed as part of the game story rather than presented as cumbersome and invasive laboratory-originated equipment.
 
-The purpose of the initial study is to investigate physiological and affect-related responses in relation to an experimentally induced change in game mechanics. Note that in this study the affective loop is closed, that is, real-time affective indicators are directly influencing the game mechanics. The research question for the current investigation evolved around the components of our affective adaptation decisions: What game mechanics (player, NPC or environmental changes) lead to what kind of emotional state. This was investigated by means of a controlled experiment, as explained in the next section. In other words the purpose of our study is to evaluate the effects of design choices for affect-generated game adaptation on player experience. To compare different in-game adaptation approaches, we needed to implement three components:
+The purpose of the initial study is to investigate physiological and affect-related responses in relation to an experimentally induced change in game mechanics. Note that in this study the affective loop is closed, that is, real-time affective indicators are directly influencing the game mechanics. The research question for the current investigation evolved around the components of my affective adaptation decisions: What game mechanics (player, NPC or environmental changes) lead to what kind of emotional state. This was investigated by means of a controlled experiment, as explained in the next section. In other words the purpose of my study is to evaluate the effects of design choices for affect-generated game adaptation on player experience. To compare different in-game adaptation approaches, I needed to implement three components:
 
 \begin{itemize}
 \item \textbf{Affect sensing}: An affect-detecting middleware engine (AME) to translate between physiological indicators of affect and actionable game input.
@@ -41,7 +41,7 @@ Fig. ~\ref{fig:system-design} shows a schematic flow diagram for the first two c
 
 \section{Affect Middleware Engine}
 
-The Affect Middleware Engine or AME is the software unit developed to transform collected physiological data into usable emotional states in real-time. While it is generally agreed that emotions can be inferred from three sources: subjective experience (e.g. feeling joyous), expressive behavior (e.g. smiling), and physiological activation (e.g. arousal) ~\cite{scherer1993neuroscience}, our affect engine provides a framework for transformation of physiological activations and some expressive behaviors. Fig. ~\ref{fig:affect-engine} is a schematic view of the signal transformation pipeline.
+The Affect Middleware Engine or AME is the software unit developed to transform collected physiological data into usable emotional states in real-time. While it is generally agreed that emotions can be inferred from three sources: subjective experience (e.g. feeling joyous), expressive behavior (e.g. smiling), and physiological activation (e.g. arousal) ~\cite{scherer1993neuroscience}, my affect engine provides a framework for transformation of physiological activations and some expressive behaviors. Fig. ~\ref{fig:affect-engine} is a schematic view of the signal transformation pipeline.
 
 \img
 {Affect engine modules}
@@ -59,7 +59,7 @@ The Affect Middleware Engine or AME is the software unit developed to transform 
 
 Applications such as games can easily integrate the affect engine where emotion recognition can offer adaptive control to maintain user interest and engagement. Once connected via sensors to the emotion recognition system, the affective state of the user can be captured continuously and in real-time, and used as a secondary input for an enhanced interaction experience. The AME runs in two states, calibration and adaptation. When calibrating, the system waits for user input, attempting to discern sensible boundaries for physiological normalization according to the process described in ~\cite{mandryk2007fuzzy}. After a set period of time, the system enters adaptation mode, where data is fed into the signal transformation stage, and from there into the game engine. For longer play sessions, the system will periodically re-enter the calibration state to compensate for drift in the physiological signals. In this manner the system compensates for the difficulty of globally bounding physiological signals by approximating a series of local temporal bounds. A sample set for fuzzy rules used in the first and the second phase can be found in Appendix ~\ref{app:phys-to-av} and ~\ref{app:av-to-emotion}.
 
-While the affect engine is capable of interpreting multiple physiological signals and performing a full fuzzy logic-based emotion inference according to the approach described in ~\cite{mandryk2007fuzzy}, we constrained ourselves to a simpler linear mapping for this experiment. Specifically, GSR signals were measured using a Thought Technology ProComp Infinity, connected to PC through a USB cable. Through the SensorLib API ~\cite{nacke2011biofeedback}, raw physiological inputs were received and basic filtering operations were performed. After the calibration period described above, the AME system began reporting normalized GSR signals to the game engine as a measure of player excitement or arousal ~\cite{aggag2011affective, tijs2009creating}. Fig. ~\ref{fig:sample-connected-system} shows a schematic view of a sample connected system components.
+While the affect engine is capable of interpreting multiple physiological signals and performing a full fuzzy logic-based emotion inference according to the approach described in ~\cite{mandryk2007fuzzy}, I constrained ourselves to a simpler linear mapping for this experiment. Specifically, GSR signals were measured using a Thought Technology ProComp Infinity, connected to PC through a USB cable. Through the SensorLib API ~\cite{nacke2011biofeedback}, raw physiological inputs were received and basic filtering operations were performed. After the calibration period described above, the AME system began reporting normalized GSR signals to the game engine as a measure of player excitement or arousal ~\cite{aggag2011affective, tijs2009creating}. Fig. ~\ref{fig:sample-connected-system} shows a schematic view of a sample connected system components.
 
 \img
 {Sample connected system}
@@ -106,15 +106,15 @@ Emotion monitor is a debugging and adjustment module. Using this module emotion 
 % \subsection{Facial Electromyography}
 
 \section{Game Environment}
-To evaluate the impact of feedback on player experience, it was also necessary to implement a game environment that could be linked to the output of the AME. We chose to implement a straightforward zombie survival game based on the Half Life 2 engine in the genre of first-person shooters (FPS). A custom map (shown in Fig. ~\ref{fig:map-of-level}) was implemented. Using the Source Software Development Kit (Source SDK). The map was composed of a small outdoor area and three buildings. Zombies (Fig. ~\ref{fig:zombie}) spawned in waves from one of 10 points, and would undertake standard Half Life 2 zombie AI behavior, looking for the player and attacking with either thrown objects when distant (weakly damaging the player) or a melee attack when close (heavily damaging the player). A good default strategy for the player was to keep the zombies at a distance, eliminating them with their moderately powerful machine gun, and not allowing them to close to melee range. The player is tasked with surviving as many waves of zombies as possible, and accrues a score based on the number of zombies killed. The player is equipped with a machine gun with unlimited ammunition and a limited number of grenades. Health packs, which restore players from received damage, and additional grenades are available at defined locations. If a player presses a button at that location, a health pack will dispense and the button will be disabled until a cool down timer has expired (Fig. ~\ref{fig:health-pack-button}).
+To evaluate the impact of feedback on player experience, it was also necessary to implement a game environment that could be linked to the output of the AME. I chose to implement a straightforward zombie survival game based on the Half Life 2 engine in the genre of first-person shooters (FPS). A custom map (shown in Fig. ~\ref{fig:map-of-level}) was implemented. Using the Source Software Development Kit (Source SDK). The map was composed of a small outdoor area and three buildings. Zombies (Fig. ~\ref{fig:zombie}) spawned in waves from one of 10 points, and would undertake standard Half Life 2 zombie AI behavior, looking for the player and attacking with either thrown objects when distant (weakly damaging the player) or a melee attack when close (heavily damaging the player). A good default strategy for the player was to keep the zombies at a distance, eliminating them with their moderately powerful machine gun, and not allowing them to close to melee range. The player is tasked with surviving as many waves of zombies as possible, and accrues a score based on the number of zombies killed. The player is equipped with a machine gun with unlimited ammunition and a limited number of grenades. Health packs, which restore players from received damage, and additional grenades are available at defined locations. If a player presses a button at that location, a health pack will dispense and the button will be disabled until a cool down timer has expired (Fig. ~\ref{fig:health-pack-button}).
 
 \largeimg
-{Our custom map level created using the Source SDK and Half-Life 2}
+{My custom map level created using the Source SDK and Half-Life 2}
 {Map level created using the Source SDK and Half-Life 2}
 {map-of-level.png}
 {map-of-level}
 
-Aspects of the game can be adjusted in real time based on the output of the AME system. In the implementation used in our study, the system could be in one of three states based on the normalized GSR value supplied from the AME. If players fell below a threshold of excitement as indicated by normalized GSR, then the system inferred that they were bored and increased the difficulty of the game. If players were above a threshold of normalized GSR, the system inferred that they were over-stimulated and made the game easier. If neither of these states were true, then the system assumed that they were playing normally and no adjustment occurred. The equations by which the game parameters were adjusted are also shown in Table ~\ref{tbl:adjustment-strategy}. While no action was taken unless normalized GSR was in the excited or bored band, once in that band, the game parameters adjusted continuously with the value of the GSR. Constants in the equations and the threshold values for excited and bored were adjusted manually, based on design experience and play testing prior to the experiment.
+Aspects of the game can be adjusted in real time based on the output of the AME system. In the implementation used in my study, the system could be in one of three states based on the normalized GSR value supplied from the AME. If players fell below a threshold of excitement as indicated by normalized GSR, then the system inferred that they were bored and increased the difficulty of the game. If players were above a threshold of normalized GSR, the system inferred that they were over-stimulated and made the game easier. If neither of these states were true, then the system assumed that they were playing normally and no adjustment occurred. The equations by which the game parameters were adjusted are also shown in Table ~\ref{tbl:adjustment-strategy}. While no action was taken unless normalized GSR was in the excited or bored band, once in that band, the game parameters adjusted continuously with the value of the GSR. Constants in the equations and the threshold values for excited and bored were adjusted manually, based on design experience and play testing prior to the experiment.
 
 %-----------------------------------------------------------
 \begin{table*}[!t]
@@ -163,19 +163,19 @@ equation             & $P_{speed} = 0.65 + 1.35 * Arousal$    \newline $G_{delay
 {hammer-editor}
 
 \section{Game Adaptation}
-The game can be adapted in numerous ways based on the output of the AME. Our research interest is in how different in-game adaptation mechanisms affect player experience. To explore in-game adaptation, we adapt either the player's abilities, the zombies' abilities or the environment. Table I shows the types of adjustments that can occur, which we describe next.
+The game can be adapted in numerous ways based on the output of the AME. My research interest is in how different in-game adaptation mechanisms affect player experience. To explore in-game adaptation, I adapt either the player's abilities, the zombies' abilities or the environment. Table I shows the types of adjustments that can occur, which I describe next.
 
 \subsection{Player}
-Player modifications are any modifications that directly affected player state, even if the environment mediated those modifications. Specifically, to adapt the player's abilities, we vary the player's speed (at which they can move around the environment) and the rate of grenade respawn in the player's weapon. Higher player speeds enabled the player to more easily escape the zombie melee attacks. The respawn rate of grenades impacted the player's ability to inflict damage by essentially giving them more powerful weapons.
+Player modifications are any modifications that directly affected player state, even if the environment mediated those modifications. This is one of the popular strategies for dynamically balancing games. Figure ~\ref{fig:gow-2-poseidons-rage} shows Kratos in God of War 2 using Poseidon's Rage to eliminate enemies. Specifically, to adapt the player's abilities, I vary the player's speed (at which they can move around the environment) and the rate of grenade respawn in the player's weapon. Higher player speeds enabled the player to more easily escape the zombie melee attacks. The respawn rate of grenades impacted the player's ability to inflict damage by essentially giving them more powerful weapons.
 
 \largeimg
-{God of War 2, Poseidon's rage concept art}
+{God of War 2, Poseidon's rage}
 {God of War 2, gamer supposed to get excited through changes applied to player character}
 {gow-2-poseidons-rage.jpg}
 {gow-2-poseidons-rage}
 
 \subsection{NPC}
-To adapt the non-player character zombies (NPCs), we can vary the speed at which the zombies move and the number of zombies (the size of the attacking crowd). The number of zombies spawned per unit time obviously increases the difficulty of the game. Increasing the speed of the zombie with respect to the player made it more difficult for the player to evade the zombie melee attacks. This manipulation is interesting as it is similar to the player speed adjustment from the perspective of game balance (i.e., the relative speed of the player and the enemy varies using both approaches), but applying the adaptation to the player or the NPC could result in different game experiences.
+Manipulating NPCs to make changes in game challenges is another major approach used in many video games. Figure ~\ref{fig:risen-2-boss-fight} shows Risen 2 boss fight and how NPCs visual and mechanics changes can affect players affective state. To adapt the non-player character zombies (NPCs), I can vary the speed at which the zombies move and the number of zombies (the size of the attacking crowd). The number of zombies spawned per unit time obviously increases the difficulty of the game. Increasing the speed of the zombie with respect to the player made it more difficult for the player to evade the zombie melee attacks. This manipulation is interesting as it is similar to the player speed adjustment from the perspective of game balance (i.e., the relative speed of the player and the enemy varies using both approaches), but applying the adaptation to the player or the NPC could result in different game experiences.
 
 \largeimg
 {Risen 2 boss fight}
@@ -184,7 +184,7 @@ To adapt the non-player character zombies (NPCs), we can vary the speed at which
 {risen-2-boss-fight}
 
 \subsection{Environment}
-To adapt the environment, we vary the density of ambient fog, which was proportionate to the distance that the player could see. By constraining the players' viewing distance with increasing fog, zombies could approach closer, leaving the player with less time to target them before they closed to within melee range. We also varied the rate at which health packs respawned in the environment. Giving players the ability to find more health packs affected their ability to take damage; however, this required player interaction with the environment (i.e., picking up the health pack) as opposed to better equipping the player directly (e.g., having players health regenerate over time).
+To adapt the environment, I vary the density of ambient fog, which was proportionate to the distance that the player could see. By constraining the players' viewing distance with increasing fog, zombies could approach closer, leaving the player with less time to target them before they closed to within melee range. I also varied the rate at which health packs respawned in the environment. Giving players the ability to find more health packs affected their ability to take damage; however, this required player interaction with the environment (i.e., picking up the health pack) as opposed to better equipping the player directly (e.g., having players health regenerate over time). Figure ~\ref{fig:risen-boss-fight} shows an example of environment adaptation in today video games.
 
 \largeimg
 {Risen boss fight}
