--- a/thesis/content/chp-5-exprm.tex
+++ b/thesis/content/chp-5-exprm.tex
@@ -9,14 +9,14 @@
 % be honest in evaluation
 % admit weaknesses
 
-Although researchers have started to explore how affective signals can be used to augment, control, or adapt gameplay, there is still little systematic research to guide developers on how players respond to changes to different aspects of a game, such as the character, the enemies, or the environment. We performed a user study to determine the impact of adaptation mechanism on player experience. A four-condition (Default, Player adapted, NPC adapted, Environment adapted) play session was employed to evaluate performance and excitement as dependent variables.
+Although researchers have started to explore how affective signals can be used to augment, control, or adapt gameplay, there is still little systematic research to guide developers on how players respond to changes to different aspects of a game, such as the character, the enemies, or the environment. I performed a user study to determine the impact of adaptation mechanism on player experience. A four-condition (Default, Player adapted, NPC adapted, Environment adapted) play session was employed to evaluate performance and excitement as dependent variables.
 
 \section{Participants}
 After filling in consent forms consistent with our institutional ethics approval, data were recorded from 15 male and 1 female University students, aged between 18 and 32 ($M = 25.00$, $SD = 3.875$). Of the participants, 94.1\% were right-handed; 41.2\% of participants rated their computer skills as advanced while the rest of 58.8\% rated their skills as intermediate; 35.3\% of participants described themselves playing video games every day, whereas 41.2\% of them described themselves playing video games a few times per week and 17\% had been playing video games a few times per month, with the rest of 5.9\% having played video games a few times per year. All participants used the PC as gaming system and 76.48\% of them also have used at least one of the four popular console platforms (XBox360, PS3, PS2, Wii) for gaming. All of participants had at least some experience with 3D shooting games like First Person Shooters: 47.1\% described themselves as playing 3D shooting games many times, whereas another 41.2\% described themselves as experts in 3D shooting games – only 11.8\% had limited or intermediate experience with 3D shooting games. Among the participants, only 5.9\% had intermediate experience in using the mouse to play games, 58.8\% described themselves as experts, and 35.3\% were between expert and intermediate.
 
 \section{Procedure}
 
-There were four experiment conditions (Control, Player adapted, NPC adapted, Environment adapted), as previously described. We balanced the order of presentation of conditions using a Latin Square. The order 4 Latin square used to permute conditions between participants was as the following (Table ~\ref{tbl:latin-square-order}):
+There were four experiment conditions (Control, Player adapted, NPC adapted, Environment adapted), as previously described. I balanced the order of presentation of conditions using a Latin Square. The order 4 Latin square used to permute conditions between participants was as the following (Table ~\ref{tbl:latin-square-order}):
 
 %-----------------------------------------------------------
 \begin{center}
@@ -35,7 +35,7 @@ Environment & Control     & Player      & NPC \\
 
 All experiments were conducted on weekdays, with the first slot beginning at 11:00h and the last ending at 18:30h. Participants were contacted to choose their preferred time slots, and the overall time for one experimental session was 1:30 hours with setup and cleanup. Participants were invited to a laboratory, and after a brief introduction of the experimental procedure the data that would be collected during the session, they were asked to fill out and sign informed consent form; this was the only paper form used during the experiment. Then the GSR sensors were attached to participant's hand.
 
-GSR sensors wired to the signal decoder can result in constraints to participant movement and to using the hands – an important factor for controlling FPS games. To diminish noisy signals and make participants feel comfortable under these limitations, the GSR sensors were attached to the hand that was handling the mouse during the game. The fingers dealing with the mouse were quite steady compared to the other hand handling the keyboard; however, the fingers used to press the left and right mouse buttons were usually also the most comfortable ones for attaching GSR sensors. Some participants used index and middle fingers to press mouse buttons and others used index and ring fingers to do so \ref{fig:gsr-attached}. We attached the GSR sensors to the middle and pinky fingers.
+GSR sensors wired to the signal decoder can result in constraints to participant movement and to using the hands – an important factor for controlling FPS games. To diminish noisy signals and make participants feel comfortable under these limitations, the GSR sensors were attached to the hand that was handling the mouse during the game. The fingers dealing with the mouse were quite steady compared to the other hand handling the keyboard; however, the fingers used to press the left and right mouse buttons were usually also the most comfortable ones for attaching GSR sensors. Some participants used index and middle fingers to press mouse buttons and others used index and ring fingers to do so \ref{fig:gsr-attached}. I attached the GSR sensors to the middle and pinky fingers.
 
 \img
 {Attaching GSR sensors}
@@ -43,7 +43,7 @@ GSR sensors wired to the signal decoder can result in constraints to participant
 {gsr-attached.jpg}
 {gsr-attached}
 
-Having the GSR sensors attached, participants were seated in a comfortable office chair, which was adjusted according to their individual height. They were then led to fill out the initial game demographic questionnaire. To keep GSR sensors attached during the experiment, all questionnaires after attaching GSR sensors were filled out using the mouse and the same computer system. After the demographic questionnaire, participants were asked to self-assess their arousal, valence and dominance level using the self assessment manikin (SAM) questionnaire ~\cite{bradley1994measuring}. Filling initial questionnaires after attaching the GSR sensors was meant to give enough time (approximately 5 minutes) for the participant to get used to the sensors before playing the game. Participants were then taken on a tour of the game. Different game mechanics were shown to them, and they were given about 1 minute, to make themselves comfortable with the game and the controls. Some participants didn't need this time due to prior experience with FPS games (and Half-Life 2 in particular) and asked to shorten the familiarization time. Then, participants played the four different game conditions that were previously described (Control, Player, NPC Enemy, Environment). Players were told to kill as many zombies as possible, and to die as few times as possible. Participants were not told about the differences between conditions. Each game condition was set to take 5 minutes. After each condition, participants were asked to write their comments about particular changes they noticed under that condition and its effect on their gameplay. Then they were asked to complete the intrinsic motivation inventory (IMI) questionnaire, the player experience of need satisfaction (PENS) questionnaire and the game engagement questionnaire (GEQ ) to rate their experience. Filling the questionnaires between conditions was done during the first part of the minimum 7 minutes of resting time before the next condition began. The resting time was meant to restore the player's GSR signal to baseline levels; however, because we normalize GSR (see next section), a full resting GSR signal was not required prior to the next gameplay session. GSR sensors recorded players' signals during both the play and the resting sessions from the beginning of the first condition to the ending of the last condition. After completion of the experiment, the sensors were removed. Participants were debriefed and compensated \$15 Canadian dollars and escorted out of the lab.
+Having the GSR sensors attached, participants were seated in a comfortable office chair, which was adjusted according to their individual height. They were then led to fill out the initial game demographic questionnaire. To keep GSR sensors attached during the experiment, all questionnaires after attaching GSR sensors were filled out using the mouse and the same computer system. After the demographic questionnaire, participants were asked to self-assess their arousal, valence and dominance level using the self assessment manikin (SAM) questionnaire ~\cite{bradley1994measuring}. Filling initial questionnaires after attaching the GSR sensors was meant to give enough time (approximately 5 minutes) for the participant to get used to the sensors before playing the game. Participants were then taken on a tour of the game. Different game mechanics were shown to them, and they were given about 1 minute, to make themselves comfortable with the game and the controls. Some participants didn't need this time due to prior experience with FPS games (and Half-Life 2 in particular) and asked to shorten the familiarization time. Then, participants played the four different game conditions that were previously described (Control, Player, NPC Enemy, Environment). Players were told to kill as many zombies as possible, and to die as few times as possible. Participants were not told about the differences between conditions. Each game condition was set to take 5 minutes. After each condition, participants were asked to write their comments about particular changes they noticed under that condition and its effect on their gameplay. Then they were asked to complete the intrinsic motivation inventory (IMI) questionnaire, the player experience of need satisfaction (PENS) questionnaire and the game engagement questionnaire (GEQ ) to rate their experience. Filling the questionnaires between conditions was done during the first part of the minimum 7 minutes of resting time before the next condition began. The resting time was meant to restore the player's GSR signal to baseline levels; however, because I normalize GSR (see next section), a full resting GSR signal was not required prior to the next gameplay session. GSR sensors recorded players' signals during both the play and the resting sessions from the beginning of the first condition to the ending of the last condition. After completion of the experiment, the sensors were removed. Participants were debriefed and compensated \$15 Canadian dollars and escorted out of the lab.
 
 \largeimg
 {Starting buttons}
@@ -51,7 +51,7 @@ Having the GSR sensors attached, participants were seated in a comfortable offic
 {starting-buttons.png}
 {starting-buttons}
 
-For each play session, players were required to have their in-game avatar press one of the four buttons on the entrance ramp labeled 1 to 4 initiating one of the four designed conditions. When one of these buttons was pressed, the Affect Middleware Engine (AME) started calibrating the player's GSR signals for 60 seconds; during the calibration mode, no adaptation to any of game parameters was applied, no matter which condition was being played. After the one minute of calibration, the system decided the standard range of the GSR signal that represented the player's excitement value. Then, except for the condition number 1 (i.e., Control no adaptation mode), the captured excitement value was normalized using the calibrated player range of excitement into a value between 0 and 1. This value was then used to adjust the game parameters; this process of capturing, adjusting and applying the signal value continued for 3 minutes until the next cycle of calibrating and adaptation started. The player was required to play every condition for at least 5 minutes to ensure that we captured a complete cycle of calibrating and adaptation.
+For each play session, players were required to have their in-game avatar press one of the four buttons on the entrance ramp labeled 1 to 4 initiating one of the four designed conditions. When one of these buttons was pressed, the Affect Middleware Engine (AME) started calibrating the player's GSR signals for 60 seconds; during the calibration mode, no adaptation to any of game parameters was applied, no matter which condition was being played. After the one minute of calibration, the system decided the standard range of the GSR signal that represented the player's excitement value. Then, except for the condition number 1 (i.e., Control no adaptation mode), the captured excitement value was normalized using the calibrated player range of excitement into a value between 0 and 1. This value was then used to adjust the game parameters; this process of capturing, adjusting and applying the signal value continued for 3 minutes until the next cycle of calibrating and adaptation started. The player was required to play every condition for at least 5 minutes to ensure that I captured a complete cycle of calibrating and adaptation.
 
 Figure ~\ref{fig:sample-signal} shows the signal values for one of the participants. In this image from left to right, the light blue line shows different conditions being played, and when the light blue line is declining towards its base value, that is the period that participant is asked to stop playing and instead is relaxing and filling out the questionnaires. The blue line is the GSR signal value of the participant, which is used as an estimation of his/her excitement level. The yellow green and pink lines show the three Player, NPC and Environment adapted conditions. In this image from left to right the conditions are Environment, Control, Player and the NPC adapted.
 
@@ -95,7 +95,7 @@ Total                                            & ~60  \\
 
 \section{Apparatus}
 
-Participants played our games (described previously) on a Computer running Windows 7. GSR data was collected using the Biograph Infinity sensor and encoder.
+Participants played the game (described previously) on a Computer running Windows 7. GSR data was collected using the Biograph Infinity sensor and encoder.
 
 \section{Questionnaires}
 
@@ -119,24 +119,24 @@ Participants were assessing their experience under different conditions, using f
 
 \section{Dependent Measures}
 
-We group our dependent measures into amount of adaptation, player performance, and player experience.
+I group my dependent measures into amount of adaptation, player performance, and player experience.
 
 \begin{itemize}
 	\item \textbf{Adaptation}: GSR Range is a measure of the span of the normalized GSR signal, giving an idea of how much range there was in GSR over the condition. Proportion is the proportion of time spent adapting the game positively (increasing difficulty) to the time spent adapting the game negatively (decreasing difficulty).
 
 	\item \textbf{Performance}: Deaths is the number of times that a player's health became so low that they died and respawned within a condition. Kills are the number of zombies that a player killed in a condition.
 
-	\item \textbf{Experience}: Mean GSR is a normalized measure of the galvanic skin response of a player over a whole condition. It is normalized by subtracting the pre-condition GSR value from each recorded GSR value (to essentially zero the signal prior to each condition). We also measured player experience using three subscales from two standardized scales. Competence is measured using the Player experience of Needs Satisfaction (PENS) scale ~\cite{ryan2006motivational} and reflects how much mastery a player feels they have over challenges in the game. Enjoyment is measured using the Intrinsic Motivation Inventory (IMI) scale ~\cite{ryan1982control} and reflects how much interest or enjoyment the game produced in the player.
+	\item \textbf{Experience}: Mean GSR is a normalized measure of the galvanic skin response of a player over a whole condition. It is normalized by subtracting the pre-condition GSR value from each recorded GSR value (to essentially zero the signal prior to each condition). I also measured player experience using three subscales from two standardized scales. Competence is measured using the Player experience of Needs Satisfaction (PENS) scale ~\cite{ryan2006motivational} and reflects how much mastery a player feels they have over challenges in the game. Enjoyment is measured using the Intrinsic Motivation Inventory (IMI) scale ~\cite{ryan1982control} and reflects how much interest or enjoyment the game produced in the player.
 \end{itemize}
 
 
 \section{Data Analysis and Results}
 
-We conducted a RM-ANOVA with condition (Control, Player, NPC, Environment) as a within-subjects factor on all dependent measures (see previous section). Comparisons of main effects used planned contrasts ~\cite{field2013discovering} with Control as the reference condition to show how each manipulation compared to the condition with no manipulation. Order of presentation of conditions showed no systematic effects in a one-way ANOVA, thus order is not considered in our main analysis. All comparisons of main effects and contrasts used $\alpha = 0.05$.
+I conducted a RM-ANOVA with condition (Control, Player, NPC, Environment) as a within-subjects factor on all dependent measures (see previous section). Comparisons of main effects used planned contrasts ~\cite{field2013discovering} with Control as the reference condition to show how each manipulation compared to the condition with no manipulation. Order of presentation of conditions showed no systematic effects in a one-way ANOVA, thus order is not considered in my main analysis. All comparisons of main effects and contrasts used $\alpha = 0.05$.
 
 \subsection{How much adaptation occurred in the game?}
 
-We adapted the game difficulty using galvanic skin response. So although GSR could indicate player arousal, in our case, it is the source of the adaptation. Thus GSR Range can tell us how much span there was in the player's experience of the game. There was a main effect of condition on GSR Range ($F_{3,45} = 4.20$, $p = .011$, $\eta^{2} = .22$). Contrasts showed that the Player and Environment conditions yielded a greater range than the control condition ($p = .007$ and $p = .028$ respectively), whereas the NPC condition did not ($p = .199$).
+I adapted the game difficulty using galvanic skin response. So although GSR could indicate player arousal, in my case, it is the source of the adaptation. Thus GSR Range can tell us how much span there was in the player's experience of the game. There was a main effect of condition on GSR Range ($F_{3,45} = 4.20$, $p = .011$, $\eta^{2} = .22$). Contrasts showed that the Player and Environment conditions yielded a greater range than the control condition ($p = .007$ and $p = .028$ respectively), whereas the NPC condition did not ($p = .199$).
 
 When looking at only the adapted conditions, there was no difference in the proportion of time spent in positive versus negative adaption ($F_{2,24} = 1.48$, $p = .248$).
 
@@ -155,7 +155,7 @@ When looking at only the adapted conditions, there was no difference in the prop
 
 \subsection{How did adaptation affect performance in the game?}
 
-Player performance was measured using the number of zombies killed by players (kills) and the number of times the player was killed by the zombies (deaths). There was a no effect of condition on kills ($F_{3,45} = 3.2$, $p = .032$) or deaths ($F_{3,45} = 3.0$, $p = .042$). However, planned contrasts revealed that the NPC condition resulted in marginally fewer kills ($p = .081$) and more deaths ($p = .023$) than the control condition. In addition, when examining each adaptation direction individually, we see a main effect of condition on number of kills during positive adaptation ($F_{2,30} = 9.43$, $p = .001$, $\eta^{2} = .39$), in which NPC adaption had fewer kills than Player ($p = .007$) or Environment ($p = .001$). This is expected as the NPC condition presents fewer zombies spawning as its adaptive mechanism, giving fewer zombies for players to kill.
+Player performance was measured using the number of zombies killed by players (kills) and the number of times the player was killed by the zombies (deaths). There was a no effect of condition on kills ($F_{3,45} = 3.2$, $p = .032$) or deaths ($F_{3,45} = 3.0$, $p = .042$). However, planned contrasts revealed that the NPC condition resulted in marginally fewer kills ($p = .081$) and more deaths ($p = .023$) than the control condition. In addition, when examining each adaptation direction individually, I see a main effect of condition on number of kills during positive adaptation ($F_{2,30} = 9.43$, $p = .001$, $\eta^{2} = .39$), in which NPC adaption had fewer kills than Player ($p = .007$) or Environment ($p = .001$). This is expected as the NPC condition presents fewer zombies spawning as its adaptive mechanism, giving fewer zombies for players to kill.
 
 \img
 {Zombie Kill Count}
@@ -177,7 +177,7 @@ Player experience was also measured using the PENS scales for competence and aut
 
 \subsection{Did participants notice the adaptations?}
 
-We asked players after each condition to comment on the game and their performance. Although not asked specifically about adaptation, players often made comments about how the game was changing. When adapting the player, 50\% commented that they noticed changed to their player; when adapting the NPCs, 31\% of participants commented that they noticed changes to the zombies' behaviors; when adapting the environment, only 13\% of players declared that they noticed environmental changes.
+I asked players after each condition to comment on the game and their performance. Although not asked specifically about adaptation, players often made comments about how the game was changing. When adapting the player, 50\% commented that they noticed changed to their player; when adapting the NPCs, 31\% of participants commented that they noticed changes to the zombies' behaviors; when adapting the environment, only 13\% of players declared that they noticed environmental changes.
 
 %todo: add some of the participants comments
 
@@ -194,7 +194,7 @@ We asked players after each condition to comment on the game and their performan
 {chart-pens-competence}
 
 \subsection{Summary of Results}
-Our results showed that GSR was higher when we adapted the game. In addition, the Range of GSR was higher in the Environment and Player conditions. Adapting the NPC resulted in fewer kills (particularly during positive adaptation) more deaths, and reduced competence and enjoyment. Finally, the environmental manipulations were least noticed, whereas adaptations made to the player were most noticed.
+The results showed that GSR was higher when I adapted the game. In addition, the Range of GSR was higher in the Environment and Player conditions. Adapting the NPC resulted in fewer kills (particularly during positive adaptation) more deaths, and reduced competence and enjoyment. Finally, the environmental manipulations were least noticed, whereas adaptations made to the player were most noticed.
 
 
 % \section{Results}
