--- a/thesis/content/common.tex
+++ b/thesis/content/common.tex
@@ -20,7 +20,7 @@
 %{label}
 
 \newcommand{\largeimg}[4]{
-\begin{figure}[h!]
+\begin{figure}[!htbp]
   \caption[#1]{#2}
   \centering
   \includegraphics[width=0.95\textwidth]{images/#3}
@@ -37,7 +37,7 @@
 %{label}
 
 \newcommand{\img}[4]{
-\begin{figure}[h!]
+\begin{figure}[!htbp]
   \caption[#1]{#2}
   \centering
   \includegraphics[width=0.5\textwidth]{images/#3}
@@ -55,7 +55,7 @@
 
 %\usepackage{svg}
 \newcommand{\svg}[4]{
-\begin{figure}[h!]
+\begin{figure}[!htbp]
   \caption[#1]{#2}
   \centering
   \includesvg{images/#3}
