--- a/thesis/content/chp-2-emotion.tex
+++ b/thesis/content/chp-2-emotion.tex
@@ -11,7 +11,7 @@
 
 %%% 1 page: overview of what is going on
 
-Using emotional responses to adapt interaction with a real-time play technology requires a method of identifying specific emotion states within an emotional space. Methods of describing emotions in the psychology literature include: basic emotion theory ~\cite{ekman1992argument, ekman1992there}, which uses a series of semantic labels (e.g., joy, fear) to identify discrete emotion categories; and dimensional emotion theory ~\cite{lang1995emotion, russell1989affect}, which argues that emotions reside in a two-dimensional space defined by arousal and valence. Regardless of how we characterize emotional response in a person, our goal is to sense the emotional state of a user and use that information in a real-time manner to adapt gameplay. Thus, we refer to a player having an affective state and we aim to adapt to a player's affect. The use of `affect' throughout this thesis reflects that we are less concerned with advancing the theories of emotion and rather are more concerned with using emotionally-relevant player states to drive gameplay.
+Using emotional responses to adapt interaction with a real-time play technology requires a method of identifying specific emotion states within an emotional space. Methods of describing emotions in the psychology literature include: basic emotion theory ~\cite{ekman1992argument, ekman1992there}, which uses a series of semantic labels (e.g., joy, fear) to identify discrete emotion categories; and dimensional emotion theory ~\cite{lang1995emotion, russell1989affect}, which argues that emotions reside in a two-dimensional space defined by arousal and valence. Regardless of how we characterize emotional response in a person, my goal is to sense the emotional state of a user and use that information in a real-time manner to adapt gameplay. Thus, I refer to a player having an affective state and I aim to adapt to a player's affect. The use of `affect' throughout this thesis reflects that I am less concerned with advancing the theories of emotion and rather more concerned with using emotionally-relevant player states to drive gameplay.
 
 In this chapter, research related to this thesis is presented. We start by introducing and reviewing common terminology used in the research on affect and emotion and the methods that have been used to measure affect and emotion.
 
@@ -57,16 +57,16 @@ Lang used a 2-D space defined by arousal and valence (pleasure) (AV space) to cl
 
 While there are various opinions on identifying emotional states, classification into discrete emotions ~\cite{dalgleish1999handbook}, or locating emotions along multiple axes ~\cite{russell1989affect, lang1995emotion}, both had some success in using physiology to identify emotional states ~\cite{cacioppo2000psychophysiology}.
 
-In this thesis, both the categorical and dimensional approaches are used for developed models. The model developed for capturing emotional state responses is coupled with gathered subjective emotional experiences of our participants based on a categorical approach. Using a categorical approach when collecting emotional experiences subjectively is the most practical method, as it is far easier for participants to communicate in a language that they can understand (emotional categories rather than the degree of arousal or valence) to describe their emotional state best. However although we did not want to use a data collection process that required the participants to learn new terminologies and describe their emotional state with unfamiliar terms, participants were introduced to the concepts of arousal, valence and dominance. Given example emotions for different levels of these variables, participants described their affective state by choosing images based on these concepts. The developed model for the affect space uses the dimensional model as in Figure ~\ref{fig:russel-av-space} to provide a mapping between the original emotional categories and a dimensional space. These models are further elaborated on in Chapter ~\ref{chap:impl}.
+In this thesis, both the categorical and dimensional approaches are used for developed models. The model developed for capturing emotional state responses is coupled with gathered subjective emotional experiences of participants based on a categorical approach. Using a categorical approach when collecting emotional experiences subjectively is the most practical method, as it is far easier for participants to communicate in a language that they can understand (emotional categories rather than the degree of arousal or valence) to describe their emotional state best. However although I did not want to use a data collection process that required the participants to learn new terminologies and describe their emotional state with unfamiliar terms, participants were introduced to the concepts of arousal, valence and dominance. Given example emotions for different levels of these variables, participants described their affective state by choosing images based on these concepts. The developed model for the affect space uses the dimensional model as in Figure ~\ref{fig:russel-av-space} to provide a mapping between the original emotional categories and a dimensional space. These models are further elaborated on in Chapter ~\ref{chap:impl}.
 
-Both mentioned models for identifying emotions convey some practical issues in emotion measurement. In an HCI context, the stimuli for potential emotions may vary less than in human-human interaction (e.g., participant verbal expressions and body language) ~\cite{zhang2010service} and also the combination of evoked emotions ~\cite{peter2006emotion}. However with help of physiological signals and the fuzzy logic model we use, such issues with our dimensional emotion models will be minimized. Though it is anticipated that we will observe different ranges of evoked emotions while interacting with play technologies compared to interacting with other humans in daily life ~\cite{zhang2010service}. Our dimensional emotion models also suffers some other problems. One problem is that arousal and valence are not independent and one can impact the other ~\cite{mandryk2007fuzzy}. Continuously capturing emotional experiences in this applied setting raises other problems. Subjective measures based on dimensional emotion theory, such as the Affect Grid ~\cite{russell1989affect} and the Self-Assessment Manikin ~\cite{bradley1994measuring}, allow for quick assessments of user emotional experiences but they may aggregate responses over the course of many events ~\cite{zhang2010service}.
+Both mentioned models for identifying emotions convey some practical issues in emotion measurement. In an HCI context, the stimuli for potential emotions may vary less than in human-human interaction (e.g., participant verbal expressions and body language) ~\cite{zhang2010service} and also the combination of evoked emotions ~\cite{peter2006emotion}. However with help of physiological signals and the fuzzy logic model I use, such issues with my dimensional emotion models will be minimized. Though it is anticipated that we will observe different ranges of evoked emotions while interacting with play technologies compared to interacting with other humans in daily life ~\cite{zhang2010service}. My dimensional emotion models also suffers some other problems. One problem is that arousal and valence are not independent and one can impact the other ~\cite{mandryk2007fuzzy}. Continuously capturing emotional experiences in this applied setting raises other problems. Subjective measures based on dimensional emotion theory, such as the Affect Grid ~\cite{russell1989affect} and the Self-Assessment Manikin ~\cite{bradley1994measuring}, allow for quick assessments of user emotional experiences but they may aggregate responses over the course of many events ~\cite{zhang2010service}.
 
 There are many visible features that can be observed and measured in our everyday interactions for consideration as emotional indicators. Different emotional indicators that have been studied to determine affect include facial expressions, gestures, postures, language, pressure, and pupil dilation ~\cite{picard2003affective}. Facial expressions for example can help us to figure out whether someone is distracted, frustrated or happy. Researchers have created sophisticated face-tracking software to analyze facial expressions in order to find out emotional state of the user ~\cite{partala2006real, sebe2006emotion}. Some researchers have extended this work by identifying facial points that undergo significant thermal changes with a change in expression and thus have performed person-independent classification to do affect interpretation using infrared measurement of facial skin temperature variations ~\cite{khan2006automated}. Other recent work has pushed the borders even further by using observable facial features that are only visible to machines. Work by Takano et al., for example, has shown how to measure heart rate based on a partial average image brightness of the subject's skin using consecutively captured time-lapsed images ~\cite{takano2007heart}.
 
 Many physiological changes that occur in the body during an emotional episode are not visible to another person. Many researchers have considered using physiological data to identify emotional states. It was first speculated by William James to use patterns of physiological responses to recognize emotion ~\cite{cacioppo2000psychophysiology}. Although this approach does not consider the individual's psyche and state of mind to identify emotions, evidence suggests that physiological data sources can differentiate among some emotions ~\cite{ekman1983autonomic}. Picard et al. performed a feature-based recognition of eight emotional states from GSR, EMG of the jaw, BVP and respiration over multiple days ~\cite{picard2001toward}. Their work presents and compares multiple algorithms for feature-based recognition of emotional states partially corrected for day-to-day differences and provides an 81\% accuracy for recognizing eight emotional states. Mandryk et al. showed how to measure and use physiological metrics such as galvanic skin response (GSR), respiration, electrocardiography (EKG), and electromyography of the jaw (EMG) as indicators of participants' affective states while playing video games ~\cite{mandryk2007fuzzy}.
 
 \section{Measuring Affect}
-When evaluating affective interfaces and interactions in HCI, one of the most important and primary challenges is to detect the affective state of the user. Measuring affect can be addressed under different titles such as sensing, detection or recognition. However, we chose to use `measurement' to signify all these different expressions. There are multiple ways that researchers measure affect in people. For example, researchers have used facial expressions ~\cite{partala2006real}, typing rhythms ~\cite{epp2011identifying}, and voice signal analysis ~\cite{picard2003affective} to characterize a user's affective state. However, the most common approach is to gather physiological signals and use mathematical modeling approaches to characterize affective state reflected by the physiological measurements ~\cite{mandryk2007fuzzy}. For example, heart rate (HR), blood pressure, respiration, galvanic skin response (GSR), and facial EMG (Electromyography) are physiological variables that have been shown to correlate with various affective states ~\cite{mandryk2008physiological}. Interpreting physiological measures can be difficult, due to noisy signals and difficulties with inference; however, recent progress in this area has been promising. In addition, there has been work to apply physiological affect recognition approaches to video game evaluation. Mandryk and Atkins presented a method of continuously identifying affective states of a user playing a computer game ~\cite{mandryk2007fuzzy}. Using the dimensional emotion model and a fuzzy logic approach on a set of physiological measures, the authors transform GSR, HR, and facial EMG (for frowning and smiling) into arousal and valence variables and then transform arousal and valence variables into five player-centric affective states including: boredom, challenge, excitement, frustration and fun. The advantage of continuously and quantitatively assessing user's affective state during an entire play session using their fuzzy logic model is what makes their model appropriate for real-time play technologies. Classically there are two major approaches for affect measurement: physiological measures and self-report. In the following sections, we present a brief description of various self-report approaches and continue with a look into today's most popular physiological measures for measuring emotion.
+When evaluating affective interfaces and interactions in HCI, one of the most important and primary challenges is to detect the affective state of the user. Measuring affect can be addressed under different titles such as sensing, detection or recognition. However, I chose to use `measurement' to signify all these different expressions. There are multiple ways that researchers measure affect in people. For example, researchers have used facial expressions ~\cite{partala2006real}, typing rhythms ~\cite{epp2011identifying}, and voice signal analysis ~\cite{picard2003affective} to characterize a user's affective state. However, the most common approach is to gather physiological signals and use mathematical modeling approaches to characterize affective state reflected by the physiological measurements ~\cite{mandryk2007fuzzy}. For example, heart rate (HR), blood pressure, respiration, galvanic skin response (GSR), and facial EMG (Electromyography) are physiological variables that have been shown to correlate with various affective states ~\cite{mandryk2008physiological}. Interpreting physiological measures can be difficult, due to noisy signals and difficulties with inference; however, recent progress in this area has been promising. In addition, there has been work to apply physiological affect recognition approaches to video game evaluation. Mandryk and Atkins presented a method of continuously identifying affective states of a user playing a computer game ~\cite{mandryk2007fuzzy}. Using the dimensional emotion model and a fuzzy logic approach on a set of physiological measures, the authors transform GSR, HR, and facial EMG (for frowning and smiling) into arousal and valence variables and then transform arousal and valence variables into five player-centric affective states including: boredom, challenge, excitement, frustration and fun. The advantage of continuously and quantitatively assessing user's affective state during an entire play session using their fuzzy logic model is what makes their model appropriate for real-time play technologies. Classically there are two major approaches for affect measurement: physiological measures and self-report. In the following sections, I present a brief description of various self-report approaches and continue with a look into today's most popular physiological measures for measuring emotion.
 
 \subsection{Self-Report}
 Self-report measures classify the emotional state of an individual by directly questioning them. This is usually done through a familiar language and vocabulary, or sometimes by using images that carry a common meaning within different languages and cultures. This is in fact trying to find out about an individual's emotional state through his or her verbal descriptions, and it can have different forms like rating scales, standardized checklists, questionnaires, semantic graphical differentials and projective methods. Self-report is maybe the simplest and easiest way to approach the issue of affect measurement, and it suffers some major weaknesses. Criticisms of self-report methods include the possibility that they draw attention to what the experimenter is trying to measure, that they fail to measure mild (low intensity) emotions, and that they are lack construct validity ~\cite{isen2007some}.
